--- a/LeSA/index.html
+++ b/LeSA/index.html
@@ -46,7 +46,7 @@
 				<div class="others">
 					<h4>Merchandise</h4>
 					<p>As LeSA UJ we want to be unqiue and special out there in the world of <b>COVID-19</b> so we sell our products at a low price so that our society can be represented properly.</p>
-					<a href="about.html #merch"target="_blank"><button class="button">Check It Out</button></a>
+					<a href="about.html" target="_blank"><button class="button">Check It Out</button></a>
 				</div>
 			</div>
 		</div>
