--- a/LeSA/about.html
+++ b/LeSA/about.html
@@ -2,6 +2,8 @@
 <html lang="eng" dir="ltr">
 <head>
 	<title>About LeSA UJ</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<link rel="shortcut icon" type="image/x-icon" href="style/Media/lesa.ico">
 	<script type="text/javascript" src="script.js"></script>
